--- a/src/app/components/side-components/profile/profile.component.css
+++ b/src/app/components/side-components/profile/profile.component.css
@@ -16,6 +16,7 @@
 }
 
 @media (min-width: 1200px) {
+
   h4,
   .h4 {
     font-size: 1.3125rem;
@@ -61,7 +62,7 @@
 }
 
 .dropdown-toggle {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .dropdown-item {
@@ -78,19 +79,21 @@
 }
 
 .dropdown-divider {
-    border-top-color: var(--bs-border-color);
+  border-top-color: var(--bs-border-color);
 }
+
 .dropdown-divider {
-    height: 0;
-    margin: 0.5rem 0;
-    overflow: hidden;
-    border-top: 1px solid var(--bs-border-color);
+  height: 0;
+  margin: 0.5rem 0;
+  overflow: hidden;
+  border-top: 1px solid var(--bs-border-color);
 }
 
 .avatar-lg {
   height: 6rem;
   width: 6rem;
 }
+
 .rounded-circle {
   border-radius: 50% !important;
 }
@@ -101,6 +104,7 @@
   border: 1px solid var(--bs-border-color);
   max-width: 100%;
 }
+
 .text-truncate {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -110,49 +114,20 @@
 .user-profile-desc {
   height: calc(100vh - 275px);
 }
+
 .accordion-item:first-of-type {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
 }
-.border {
+
+/* .border {
   border: 1px solid #36404a !important;
-}
-.accordion-item {
-  background-color: var(--bs-accordion-bg);
-}
 
-.card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
+} */
+.border-line {
+  border-bottom: 1px solid #33373f;
+  margin-top: 2em;
 
-  background-clip: border-box;
-
-  border-radius: 0.25rem;
-}
-
-.accordion-button {
-  position: relative;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  padding: 0.75rem 1.25rem;
-  font-size: 0.9375rem;
-  color: #495057;
-  text-align: left;
-  background-color: var(--bs-accordion-button-bg);
-  border: 0;
-  border-radius: 0;
-  overflow-anchor: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out,
-    border-radius 0.15s ease;
-}
-
-i {
-  color: #a6b0cf;
 }
 
 .ps__rail-x,
@@ -162,4 +137,87 @@ i {
   opacity: 0;
   position: absolute;
   transition: background-color 0.2s linear, opacity 0.2s linear;
+}
+
+.accordion-button:focus {
+  box-shadow: none;
+  border-color: rgba(0, 0, 0, .125);
+
+}
+
+.accordion-button::after {
+  filter: invert(1);
+
+}
+
+.accordion .item .accordion-header button {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.profile-name h6,
+.profile-time h6,
+.profile-email h6,
+.profile-location h6 {
+  line-height: 0.1em;
+  color: #8d99ae;
+}
+
+.accordion-item {
+  border: 2px solid #303841;
+}
+
+.accordion-header {
+  background: #303841;
+
+}
+
+.accordion-button {
+  color: #fff;
+  background-color: var(--bs-accordion-button-bg);
+
+}
+
+.accordion-body {
+  background-color: #262e35;
+  color: #fff;
+}
+
+.files-box {
+  background-color: #161a1d;
+  ;
+  padding: 4px 13px 3px 9px;
+}
+
+.image-box {
+
+  background-color: #5e548e;
+  width: 50px;
+  height: 50px;
+}
+
+.image-box i {
+  margin-top: 18px;
+  margin-left: 12px;
+}
+
+.field h6 {
+  font-size: 0.9em;
+  line-height: -7em;
+  text-align: center;
+  justify-content: center;
+  padding-top: 10px;
+
+
+}
+
+.field p {
+  font-size: 0.7em;
+  line-height: 0.1em;
+  color: #8d99ae;
+}
+
+.accordion-button:not(.collapsed),
+.accordion-button:not(.collapsed):focus {
+  box-shadow: rgb(0 0 0 / 0%) 0px 0px 0px;
 }
