settings component created

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="navbar-brand-box">
       <a class="logo logo-dark">
         <span class="logo-sm"
-          ><img src="../../../assets/logoHalf.png" alt="" />
+          ><img src="../../../assets/logo-removed-bg.png" alt="" />
         </span>
       </a>
     </div>
@@ -67,6 +67,7 @@
           class="nav-item"
           ng-reflect-ngb-tooltip="Settings"
           routerLinkActive="active"
+          routerLink="/home/settings"
         >
           <a id="pills-setting-tab" class="nav-link">
             <i class="ri-settings-2-line"></i>
