--- a/src/app/components/side-components/contacts/contacts.component.html
+++ b/src/app/components/side-components/contacts/contacts.component.html
@@ -15,7 +15,7 @@
         <input
           class="form-control search mt-2"
           type="search"
-          placeholder="Search groups..."
+          placeholder="Search Contacts..."
           aria-label="Search"
         />
         <i class="fas fa-search"></i>
