--- a/src/app/components/side-components/profile/profile.component.html
+++ b/src/app/components/side-components/profile/profile.component.html
@@ -1,30 +1,64 @@
-<div>
+<div *ngFor="let item of profileData">
   <div class="px-4 pt-4">
     <div class="user-chat-nav float-end">
       <div class="dropdown">
-        <a _ngcontent-wyq-c114="" href="javascript: void(0);" ngbdropdowntoggle="" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false" class="dropdown-toggle font-size-18 text-muted">
+        <a
+          _ngcontent-wyq-c114=""
+          href="javascript: void(0);"
+          ngbdropdowntoggle=""
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false"
+          class="dropdown-toggle font-size-18 text-muted"
+        >
           <i _ngcontent-wyq-c114="" class="ri-more-2-fill"></i>
         </a>
 
-        <div _ngcontent-wyq-c114="" ngbdropdownmenu="" class="dropdown-menu dropdown-menu-right">
-          <a _ngcontent-wyq-c114="" href="javascript:void(0);" class="dropdown-item">Edit</a>
-          <a _ngcontent-wyq-c114="" href="javascript:void(0);" class="dropdown-item">Action</a>
+        <div
+          _ngcontent-wyq-c114=""
+          ngbdropdownmenu=""
+          class="dropdown-menu dropdown-menu-right"
+        >
+          <a
+            _ngcontent-wyq-c114=""
+            href="javascript:void(0);"
+            class="dropdown-item"
+            >Edit</a
+          >
+          <a
+            _ngcontent-wyq-c114=""
+            href="javascript:void(0);"
+            class="dropdown-item"
+            >Action</a
+          >
           <div _ngcontent-wyq-c114="" class="dropdown-divider"></div>
-          <a _ngcontent-wyq-c114="" href="javascript:void(0);" class="dropdown-item">Another action</a>
+          <a
+            _ngcontent-wyq-c114=""
+            href="javascript:void(0);"
+            class="dropdown-item"
+            >Another action</a
+          >
         </div>
       </div>
     </div>
     <h4 _ngcontent-hly-c114="" class="mb-0">My Profile</h4>
   </div>
 
-  <div class="text-center p-4 ">
+  <div class="text-center p-4">
     <div class="mb-4">
-      <img alt="" class="rounded-circle avatar-lg img-thumbnail" src="../../../../assets/profile.png" />
+      <img
+        alt=""
+        class="rounded-circle avatar-lg img-thumbnail"
+        src="../../../../assets/profile.png"
+      />
     </div>
-    <h5 class="font-size-12 mb-1 text-truncate">admin</h5>
+    <h5 class="font-size-12 mb-1 text-truncate">
+      {{ item.username | titlecase }}
+    </h5>
     <p class="text-truncate mb-1">
-      <i class="ri-record-circle-fill font-size-10 text-success me-1 d-inline-block">
+      <i
+        class="ri-record-circle-fill font-size-10 text-success me-1 d-inline-block"
+      >
       </i>
       Active
     </p>
@@ -35,33 +69,40 @@
     <div style="position: static" class="ps ps--active-y">
       <div class="ps-content">
         <div class="text-muted">
-          <p class="mb-4" style="  color: #8d99ae;">
-            If several languages coalesce, the grammar of the resulting language
-            is more simple and regular than that of the individual.
-          </p>
+          <p class="mb-4" style="color: #8d99ae">{{ item.Bio }}</p>
         </div>
-
 
         <div class="profile-box">
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-                  aria-expanded="true" aria-controls="collapseOne">
-                  <i class="fa-regular fa-user pe-3" style="color:white ;"></i> About
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  <i class="fa-regular fa-user pe-3" style="color: white"></i>
+                  About
                 </button>
               </h2>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                data-bs-parent="#accordionExample">
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample"
+              >
                 <div class="accordion-body">
                   <div class="container">
                     <div class="profile-name mt-3">
                       <h6>Name</h6>
-                      <span>admin</span>
+                      <span>{{ item.name }}</span>
                     </div>
                     <div class="profile-email mt-4">
                       <h6>Email</h6>
-                      <span>abc@123.com</span>
+                      <span>{{ item.email }}</span>
                     </div>
                     <div class="profile-time mt-4">
                       <h6>Time</h6>
@@ -71,142 +112,118 @@
                       <h6>location</h6>
                       <span>California, USA</span>
                     </div>
-
                   </div>
                 </div>
               </div>
             </div>
             <div class="accordion-item mt-3 mb-5">
               <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  <i class="ri-attachment-line pe-3" style="color:white ;"></i> Attached Files
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo"
+                >
+                  <i class="ri-attachment-line pe-3" style="color: white"></i>
+                  Attached Files
                 </button>
               </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                data-bs-parent="#accordionExample">
+              <div
+                id="collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample"
+              >
                 <div class="accordion-body">
                   <div class="container-box mt-2">
-                    <div class=" navbar  files-box">
+                    <div class="navbar files-box">
                       <div class="box navbar">
                         <div class="image-box">
                           <i class="fas fa-images"></i>
                         </div>
 
-
                         <div class="field ms-3">
-                          <h6>
-                            Admin-A.zip
-
-                          </h6>
+                          <h6>Admin-A.zip</h6>
                           <p>12.5 MB</p>
                         </div>
                       </div>
 
-
-
                       <div class="link">
-                        <i class="ri-download-2-line me-3" style="color: wheat;"></i>
-                        <i class="ri-more-fill" style="color: white;"></i>
+                        <i
+                          class="ri-download-2-line me-3"
+                          style="color: wheat"
+                        ></i>
+                        <i class="ri-more-fill" style="color: white"></i>
                       </div>
-
-
                     </div>
-                    <div class=" navbar mt-2 files-box">
+                    <div class="navbar mt-2 files-box">
                       <div class="box navbar">
                         <div class="image-box">
                           <i class="fas fa-images"></i>
                         </div>
 
-
                         <div class="field ms-3">
-                          <h6>
-                            Image-1.jpg
-
-                          </h6>
+                          <h6>Image-1.jpg</h6>
                           <p>4.2 MB</p>
                         </div>
                       </div>
 
-
-
                       <div class="link">
-                        <i class="ri-download-2-line me-3" style="color: wheat;"></i>
-                        <i class="ri-more-fill" style="color: white;"></i>
+                        <i
+                          class="ri-download-2-line me-3"
+                          style="color: wheat"
+                        ></i>
+                        <i class="ri-more-fill" style="color: white"></i>
                       </div>
-
-
                     </div>
-                    <div class=" navbar  files-box mt-2">
+                    <div class="navbar files-box mt-2">
                       <div class="box navbar">
                         <div class="image-box">
                           <i class="fas fa-images"></i>
                         </div>
 
-
                         <div class="field ms-3">
-                          <h6>
-                            Image-2.jpg
-
-                          </h6>
+                          <h6>Image-2.jpg</h6>
                           <p>3.1 MB</p>
                         </div>
                       </div>
 
-
-
                       <div class="link">
-                        <i class="ri-download-2-line me-3" style="color: wheat;"></i>
-                        <i class="ri-more-fill" style="color: white;"></i>
+                        <i
+                          class="ri-download-2-line me-3"
+                          style="color: wheat"
+                        ></i>
+                        <i class="ri-more-fill" style="color: white"></i>
                       </div>
-
-
                     </div>
-                    <div class=" navbar  files-box mt-2">
+                    <div class="navbar files-box mt-2">
                       <div class="box navbar">
                         <div class="image-box">
                           <i class="fas fa-images"></i>
                         </div>
 
-
                         <div class="field ms-3">
-                          <h6>
-                            Landing-A.zip
-
-                          </h6>
+                          <h6>Landing-A.zip</h6>
                           <p>6.7 MB</p>
                         </div>
                       </div>
 
-
-
                       <div class="link">
-                        <i class="ri-download-2-line me-3" style="color: wheat;"></i>
-                        <i class="ri-more-fill" style="color: white;"></i>
+                        <i
+                          class="ri-download-2-line me-3"
+                          style="color: wheat"
+                        ></i>
+                        <i class="ri-more-fill" style="color: white"></i>
                       </div>
-
-
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
           </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
       </div>
       <div class="ps__rail-x" style="left: 0px; bottom: 0px"></div>
     </div>
