--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,11 @@
 
         <div class="formContainer">
           <div class="formDiv">
-            <form [formGroup]="loginForm" class="ng-pristine ng-valid ng-touched" (ngSubmit)="onSubmit()">
+            <form
+              [formGroup]="loginForm"
+              class="ng-pristine ng-valid ng-touched"
+              (ngSubmit)="onSubmit()"
+            >
               <div class="mb-3">
                 <label for="" class="form-label">Email</label>
                 <div
@@ -65,19 +69,38 @@
                     class="inputclass form-control bg-soft-light border-light ng-valid ng-dirty ng-touched"
                     formControlName="password"
                     placeholder="Enter your Password"
-                    
+                    #loginPasswordInput
                   />
+                  <span class="eyePass">
+                    <i
+                      class="fa fa-eye"
+                      *ngIf="showPass"
+                      (click)="togglePassword(loginPasswordInput)"
+                    ></i>
+                    <i
+                      class="fa fa-eye-slash"
+                      *ngIf="!showPass"
+                      (click)="togglePassword(loginPasswordInput)"
+                    ></i>
+                  </span>
                 </div>
               </div>
 
               <div class="form-check mb-4">
-                <input  type="checkbox"  id="remember-check" class="form-check-input" formControlName="rememberMe">
+                <input
+                  type="checkbox"
+                  id="remember-check"
+                  class="form-check-input"
+                  formControlName="rememberMe"
+                />
                 <label for="remember-check" class="form-check-label"
                   >Remember me</label
                 >
               </div>
               <div class="d-grid">
-                <button type="submit" class="mat-button" mat-raised-button>Sign In</button>
+                <button type="submit" class="mat-button" mat-raised-button>
+                  Sign In
+                </button>
               </div>
             </form>
           </div>
