--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -55,14 +55,13 @@ h4 {
   line-height: 1.5;
   text-align: center;
   white-space: nowrap;
-  /* border: 1px solid var(--bs-input-group-addon-border-color); */
   border-radius: 0.25rem;
 }
 .border-light {
   border-color: #353e48 !important;
 }
 .inputclass {
-  height: 30px;
+  height: 32px;
   background-color: #303841;
   color: white;
 }
@@ -250,4 +249,12 @@ p {
 .form-check-input:checked {
   background-color: #3f51b5;
   border-color: #3f51b5;
+}
+
+.eyePass{
+  position: absolute;
+  right: 0.5rem;
+  top: 0.3em;
+  cursor: pointer;
+  z-index: 1000;
 }
